========================
Changes between versions
========================

0.2.1
=====

Bug fixes:

  - In plain text output, made sure that subtrees are printed at a path with
    extra dependencies occuring as late as possible, if at all. Subtree
    references should now always point back towards the top of the output.


0.2
===

User visible:
  - improved documentation

  - renamed the short option for --no-extras to -x

  - added an option -n or --print-version for printing version numbers of
    active distributions along with the project name

Bug fixes:
  - consider dependencies broken in the case of a version conflict

Organisation:
  - fixed handling of tl namespace package


0.1
===

initial release